Codecademy generated from the project submission page.

--- a/Colmar-Project/index.html
+++ b/Colmar-Project/index.html
@@ -5,32 +5,34 @@
       <link href="https://fonts.googleapis.com/css?family=Oxygen:400,700|Raleway:300,400,500" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500" rel="stylesheet">
       <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+      <link rel="icon" href="./Resources/Media/images/favicon-colmar.ico" type="image/x-icon">
     <title>Colmar Academy</title>
   </head>
   <body>
 
 <!-- Header -->
-    <header class="flex">
-      <nav class="container flex">
-        <div class="logo flex">
-          <img src="./Resources/Media/images/ic-logo.svg"/>
+    <header class="flex" role="presentation">
+      <nav class="container flex" role="presentation">
+        <div class="logo flex" role="presentation">
+          <img src="./Resources/Media/images/ic-logo.svg" alt="Colmar Academy Logo"/>
           <span id="bold">COLMAR</span>
           <span class="gray">ACADEMY</span>
         </div>
 
-      <div class="navigation">
-          <ul class="desktop">
+
+      <div class="navigation" role="presentation">
+          <ul class="desktop" role="presentation">
             <li><a href="#">On Campus</a></li>
             <li><a href="#">Online</a></li>
             <li><a href="#">Our Companies</a></li>
             <li><a href="#">Sign In</a></li>
           </ul>
         </div>
-          <div class="mobile mobnav flex">
-            <img src="./resources/media/images/ic-logo.svg">
-            <img src="./resources/media/images/ic-on-campus.svg">
-            <img src="./resources/media/images/ic-online.svg">
-            <img src="./resources/media/images/ic-login.svg">
+          <div class="mobile mobnav flex" role="presentation">
+            <img src="./resources/media/images/ic-logo.svg" alt="on campus link">
+            <img src="./resources/media/images/ic-on-campus.svg" alt="online link">
+            <img src="./resources/media/images/ic-online.svg" alt="companies link">
+            <img src="./resources/media/images/ic-login.svg" alt="sign in link">
           </div>
       </nav>
     </header>
@@ -41,15 +43,15 @@
 
   <!--Main banner-->
 
-    <div class="main-banner">
-      <div class="featured-post">
-        <img src="./Resources/Media/images/banner.jpg"/>
+    <div class="main-banner" role="presentation">
+      <div class="featured-post" role="presentation">
+        <img src="./Resources/Media/images/banner.jpg" alt="people learning"/>
       </div>
-        <div class="side-bar">
-          <div class="content">
+        <div class="side-bar" role="presentation">
+          <div class="content" role="presentation">
             <h1>Learn Something New Every Day</h1>
             <h3>There is something for everyone at Colmar. Start by discovering our range of courses.</h3>
-            <div class="button">
+            <div class="button" alt="start button">
                 Start Here
             </div>
           </div>
@@ -58,10 +60,10 @@
 
 <!--Second Banner -->
 
-    <div class="features second-banner">
-      <div class="featured-post learn desktop">
-          <img src="./Resources/Media/images/information-main.jpg"/>
-            <div class="content">
+    <div class="features second-banner" role="presentation">
+      <div class="featured-post learn desktop" role="presentation">
+          <img src="./Resources/Media/images/information-main.jpg" alt="Person reading"/>
+            <div class="content" role="presentation">
               <h1>It doesn't hurt to keep practicing</h1>
               <h3>Practice makes perfect. Learn new skills every day to stay ahead of the game and find your dream job.</h3>
               <p>Emmanuel, Sr Strategist at Hiring.com</p>
@@ -70,34 +72,34 @@
 
 <!--Second banner side bar-->
 
-      <div class="side-bar desktop">
-        <div class="feature">
-          <div class="feature-image">
-            <img src="./Resources/Media/images/information-orientation.jpg"/>
+      <div class="side-bar desktop" role="presentation">
+        <div class="feature" role="presentation">
+          <div class="feature-image" role="presentation">
+            <img src="./Resources/Media/images/information-orientation.jpg" alt="orientation illustration"/>
           </div>
-          <div class="content">
+          <div class="content" role="presentation">
             <h2>Orientation Date</h2>
             <p class="description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
             <p><a href=#>Read more</a></p>
           </div>
         </div>
 
-        <div class="feature">
-          <div class="feature-image">
-          <img src="./Resources/Media/images/information-campus.jpg"/>
+        <div class="feature" role="presentation">
+          <div class="feature-image" role="presentation">
+          <img src="./Resources/Media/images/information-campus.jpg" alt="campus"/>
         </div>
-          <div class="content">
+          <div class="content" role="presentation">
             <h2>Our Campus</h2>
             <p class="description">Find which campus is close by you</p>
             <p><a href=#>Read more</a></p>
           </div>
         </div>
 
-        <div class="feature">
-          <div class="feature-image">
-          <img src="./Resources/Media/images/information-guest-lecture.jpg"/>
+        <div class="feature" role="presentation">
+          <div class="feature-image" role="presentation">
+          <img src="./Resources/Media/images/information-guest-lecture.jpg" alt="Oliver Sack"/>
         </div>
-          <div class="content">
+          <div class="content" role="presentation">
             <h2>Our guest lecture</h2>
             <p class="description">Join a key note by Oliver Sack bout music in medical treatment</p>
             <p><a href=#>Read more</a></p>
@@ -107,23 +109,23 @@
 
 <!-- Mobile side bar version -->
 
-      <div class="side-bar mobile">
-        <div class="feature">
-          <div class="feature-image">
-            <img src="./Resources/Media/images/information-orientation-mobile.jpg"/>
+      <div class="side-bar mobile" role="presentation">
+        <div class="feature" role="presentation">
+          <div class="feature-image" role="presentation">
+            <img src="./Resources/Media/images/information-orientation-mobile.jpg" alt="orientation illustration"/>
           </div>
-          <div class="content">
+          <div class="content" role="presentation">
             <h2>Orientation Date</h2>
             <p class="description">Tue 10/11 & Wed 10/12: 8am-3pm</p>
           <p><a href=#>Read more</a></p>
         </div>
       </div>
 
-      <div class="feature">
-        <div class="feature-image">
-          <img src="./Resources/Media/images/information-campus-mobile.jpg"/>
+      <div class="feature" role="presentation">
+        <div class="feature-image" role="presentation">
+          <img src="./Resources/Media/images/information-campus-mobile.jpg" alt="campus"/>
         </div>
-        <div class="content">
+        <div class="content" role="presentation">
           <h2>Our Campus</h2>
           <p class="description">Find which campus is close by you</p>
           <p><a href=#>Read more</a></p>
@@ -131,10 +133,10 @@
       </div>
 
       <div class="feature">
-        <div class="feature-image">
-          <img src="./Resources/Media/images/information-guest-lecture-mobile.jpg"/>
+        <div class="feature-image" role="presentation">
+          <img src="./Resources/Media/images/information-guest-lecture-mobile.jpg" alt="Oliver Sack"/>
         </div>
-        <div class="content">
+        <div class="content" role="presentation">
           <h2>Our guest lecture</h2>
           <p class="description">Join a key note by Oliver Sack bout music in medical treatment</p>
           <p><a href=#>Read more</a></p>
@@ -145,67 +147,67 @@
 
 
   <!--Courses section-->
-      <div class="courses-section container">
+      <div class="courses-section container" role="presentation">
         <h1>Start Learning</h1>
 
         <!--Desktop version courses -->
 
-          <div class="courses desktop">
+          <div class="courses desktop" role="presentation">
             <div class="course">
-              <div class="course-image">
-                <img src="./Resources/Media/images/course-software.jpg"/>
+              <div class="course-image" role="presentation">
+                <img src="./Resources/Media/images/course-software.jpg" alt="Software Engineering Course"/>
               </div>
-              <div class="content">
+              <div class="content" role="presentation">
                 <h2>Software Engineering</h2>
                 <p>COURSES</p>
                 <p>Web Development, Mobile Development, iOT, APIs</p>
               </div>
             </div>
             <div class="course">
-              <div class="course-image">
-                <img src="./Resources/Media/images/course-computer-art.jpg"/>
+              <div class="course-image" role="presentation">
+                <img src="./Resources/Media/images/course-computer-art.jpg" alt="Computer Art Course"/>
               </div>
-              <div class="content">
+              <div class="content" role="presentation">
                 <h2>Computer Art</h2>
                 <p>COURSES</p>
                 <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animations</p>
               </div>
             </div>
             <div class="course">
-              <div class="course-image">
-                <img src="./Resources/Media/images/course-design.jpg"/>
+              <div class="course-image" role="presentation">
+                <img src="./Resources/Media/images/course-design.jpg" alt="Design Course"/>
               </div>
-              <div class="content">
+              <div class="content" role="presentation">
                 <h2>Design</h2>
                 <p>COURSES</p>
                 <p>User Experience Design, User Research, Visual Design</p>
               </div>
             </div>
             <div class="course">
-              <div class="course-image">
-                <img src="./Resources/Media/images/course-data.jpg"/>
+              <div class="course-image" role="presentation">
+                <img src="./Resources/Media/images/course-data.jpg" alt="Data Course"/>
               </div>
-              <div class="content">
+              <div class="content role="presentation"">
                 <h2>Data</h2>
                 <p>COURSES</p>
                 <p>Data Science, Big Data, SQL, Data Visualization</p>
               </div>
             </div>
             <div class="course">
-              <div class="course-image">
-                <img src="./Resources/Media/images/course-business.jpg"/>
+              <div class="course-image" role="presentation">
+                <img src="./Resources/Media/images/course-business.jpg" alt="Business Course"/>
               </div>
-              <div class="content">
+              <div class="content" role="presentation">
                 <h2>Business</h2>
                 <p>COURSES</p>
                 <p>Product Development, Business Development, Startup</p>
               </div>
             </div>
             <div class="course">
-              <div class="course-image">
-                <img src="./Resources/Media/images/course-marketing.jpg"/>
+              <div class="course-image" role="presentation">
+                <img src="./Resources/Media/images/course-marketing.jpg" alt="Marketing Course"/>
               </div>
-              <div class="content">
+              <div class="content" role="presentation">
                 <h2>Marketing</h2>
                 <p>COURSES</p>
                 <p>Analytics, Content Marketing, Mobile Marketing</p>
@@ -215,7 +217,7 @@
 
         <!--Mobile version courses-->
 
-          <div class="mobcourses flex mobile">
+          <div class="mobcourses flex mobile" role="presentation">
             <span class="mobspan">Software engineering</span>
             <span class="mobspan">Computer art</span>
             <span class="mobspan">Design</span>
@@ -233,30 +235,30 @@
       <div class="features">
         <div class="featured-post">
           <div class="featured-video">
-            <video src="./resources/Media/videos/thesis.mp4"></video>
+            <video src="./resources/Media/videos/thesis.mp4" alt="illustrative thesis video"></video>
           </div>
-          <div class="content desktop">
+          <div class="content desktop" role="presentation">
             <h2>Reimagine Urban</h2>
             <p>This video features the urbanisation of the world. It shows how we are moving towards more dendely populated cities and how these are evolving. The major part of this will be influenced by technology. This will eventually help us reinvent the city we know today.</p>
           </div>
         </div>
 
-        <div class="side-bar desktop">
-          <div class="feature">
-            <div class="feature-image">
-              <img src="./Resources/Media/images/thesis-now-and-then.jpg"/>
+        <div class="side-bar desktop" role="presentation">
+          <div class="feature" role="presentation">
+            <div class="feature-image" role="presentation">
+              <img src="./Resources/Media/images/thesis-fisma.jpg" alt="designer showcase video"/>
             </div>
-            <div class="content">
+            <div class="content" role="presentation">
               <h2>Fisma: design and prototype</h2>
               <p class="description">Designer showcase of new prototype product</p>
             </div>
           </div>
 
-          <div class="feature">
-            <div class="feature-image">
-              <img src="./Resources/Media/images/thesis-fisma.jpg"/>
+          <div class="feature" role="presentation">
+            <div class="feature-image" role="presentation">
+              <img src="./Resources/Media/images/thesis-now-and-then.jpg" alt="research study video"/>
             </div>
-            <div class="content">
+            <div class="content" role="presentation">
               <h2>Now and then</h2>
               <p class="description">Research study about New York</p>
             </div>
@@ -266,10 +268,10 @@
 
 <!--Footer-->
       <footer>
-        <div class="copyright">
+        <div class="copyright" role="presentation">
           <span>(c) Colmar Academy. All rights Reserved</span>
         </div>
-        <div class="terms">
+        <div class="terms" role="presentation">
           <span>Terms</span>
           <span>Privacy</span>
         </div>
